methods.slug.SlugTracking.scala.code
var booleen : Boolean = false
def isFacingTrail():Boolean = {
  if (estFaceMur) {
    return booleen
  }
  do {avance();} while (getCouleurSol() == Color.green)

}